seaqt/QtWidgets/gen_qdatetimeedit.h

class QDateEdit;
class QDateTimeEdit;
class QTimeEdit;
typedef struct QCalendar QCalendar;
typedef struct QCalendarWidget QCalendarWidget;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QSize QSize;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct VirtualQDateTimeEdit VirtualQDateTimeEdit;
void* QDateTimeEdit_vdata(VirtualQDateTimeEdit* self);
QMetaObject* QDateTimeEdit_metaObject(const QDateTimeEdit* self);
void* QDateTimeEdit_metacast(QDateTimeEdit* self, const char* param1);
int QDateTimeEdit_metacall(QDateTimeEdit* self, int param1, int param2, void** param3);
struct miqt_string QDateTimeEdit_tr(const char* s);
QDateTime* QDateTimeEdit_dateTime(const QDateTimeEdit* self);
QDate* QDateTimeEdit_date(const QDateTimeEdit* self);
QTime* QDateTimeEdit_time(const QDateTimeEdit* self);
QCalendar* QDateTimeEdit_calendar(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendar(QDateTimeEdit* self, QCalendar* calendar);
QDateTime* QDateTimeEdit_minimumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_clearMinimumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_setMinimumDateTime(QDateTimeEdit* self, QDateTime* dt);
QDateTime* QDateTimeEdit_maximumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_clearMaximumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_setMaximumDateTime(QDateTimeEdit* self, QDateTime* dt);
void QDateTimeEdit_setDateTimeRange(QDateTimeEdit* self, QDateTime* min, QDateTime* max);
QDate* QDateTimeEdit_minimumDate(const QDateTimeEdit* self);
void QDateTimeEdit_setMinimumDate(QDateTimeEdit* self, QDate* min);
void QDateTimeEdit_clearMinimumDate(QDateTimeEdit* self);
QDate* QDateTimeEdit_maximumDate(const QDateTimeEdit* self);
void QDateTimeEdit_setMaximumDate(QDateTimeEdit* self, QDate* max);
void QDateTimeEdit_clearMaximumDate(QDateTimeEdit* self);
void QDateTimeEdit_setDateRange(QDateTimeEdit* self, QDate* min, QDate* max);
QTime* QDateTimeEdit_minimumTime(const QDateTimeEdit* self);
void QDateTimeEdit_setMinimumTime(QDateTimeEdit* self, QTime* min);
void QDateTimeEdit_clearMinimumTime(QDateTimeEdit* self);
QTime* QDateTimeEdit_maximumTime(const QDateTimeEdit* self);
void QDateTimeEdit_setMaximumTime(QDateTimeEdit* self, QTime* max);
void QDateTimeEdit_clearMaximumTime(QDateTimeEdit* self);
void QDateTimeEdit_setTimeRange(QDateTimeEdit* self, QTime* min, QTime* max);
int QDateTimeEdit_displayedSections(const QDateTimeEdit* self);
int QDateTimeEdit_currentSection(const QDateTimeEdit* self);
int QDateTimeEdit_sectionAt(const QDateTimeEdit* self, int index);
void QDateTimeEdit_setCurrentSection(QDateTimeEdit* self, int section);
int QDateTimeEdit_currentSectionIndex(const QDateTimeEdit* self);
void QDateTimeEdit_setCurrentSectionIndex(QDateTimeEdit* self, int index);
QCalendarWidget* QDateTimeEdit_calendarWidget(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendarWidget(QDateTimeEdit* self, QCalendarWidget* calendarWidget);
int QDateTimeEdit_sectionCount(const QDateTimeEdit* self);
void QDateTimeEdit_setSelectedSection(QDateTimeEdit* self, int section);
struct miqt_string QDateTimeEdit_sectionText(const QDateTimeEdit* self, int section);
struct miqt_string QDateTimeEdit_displayFormat(const QDateTimeEdit* self);
void QDateTimeEdit_setDisplayFormat(QDateTimeEdit* self, struct miqt_string format);
bool QDateTimeEdit_calendarPopup(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendarPopup(QDateTimeEdit* self, bool enable);
int QDateTimeEdit_timeSpec(const QDateTimeEdit* self);
void QDateTimeEdit_setTimeSpec(QDateTimeEdit* self, int spec);
QSize* QDateTimeEdit_sizeHint(const QDateTimeEdit* self);
void QDateTimeEdit_clear(QDateTimeEdit* self);
void QDateTimeEdit_stepBy(QDateTimeEdit* self, int steps);
bool QDateTimeEdit_event(QDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_dateTimeChanged(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_timeChanged(QDateTimeEdit* self, QTime* time);
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_dateChanged(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
void QDateTimeEdit_setDateTime(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_setDate(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_setTime(QDateTimeEdit* self, QTime* time);
struct miqt_string QDateTimeEdit_tr2(const char* s, const char* c);
struct miqt_string QDateTimeEdit_tr3(const char* s, const char* c, int n);
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));